--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "magic-nix-cache-action",
+  "name": "flakehub-cache-action",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -15,15 +15,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DeterminateSystems/magic-nix-cache-action.git"
+    "url": "git+https://github.com/DeterminateSystems/flakehub-cache-action.git"
   },
   "keywords": [],
   "author": "",
   "license": "LGPL",
   "bugs": {
-    "url": "https://github.com/DeterminateSystems/magic-nix-cache-action/issues"
+    "url": "https://github.com/DeterminateSystems/flakehub-cache-action/issues"
   },
-  "homepage": "https://github.com/DeterminateSystems/magic-nix-cache-action#readme",
+  "homepage": "https://github.com/DeterminateSystems/flakehub-cache-action#readme",
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
