--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,6 @@ jobs:
       fail-fast: false
       matrix:
         determinate: [true, false]
-        use-gha-cache: ["disabled", "no-preference", "enabled"]
-        use-flakehub: ["disabled", "no-preference", "enabled"]
         id-token: ["write", "none"]
         systems:
           - nix-system: "aarch64-darwin"
@@ -111,18 +109,10 @@ jobs:
         with:
           _internal-strict-mode: true
           _internal-obliterate-actions-id-token-request-variables: ${{ matrix.id-token == 'none' }}
-          use-gha-cache: ${{ matrix.use-gha-cache }}
-          use-flakehub: ${{ matrix.use-flakehub }}
       - name: Check the cache for liveness
         env:
-          EXPECT_FLAKEHUB: ${{ toJson(matrix.use-flakehub != 'disabled' && matrix.id-token == 'write') }}
-          EXPECT_GITHUB_CACHE: ${{ toJson(
-            (matrix.use-gha-cache != 'disabled')
-            && (
-            (!(matrix.use-flakehub != 'disabled' && matrix.id-token == 'write'))
-            || (matrix.use-gha-cache == 'enabled')
-            )
-            ) }}
+          EXPECT_FLAKEHUB: ${{ toJson(matrix.id-token == 'write') }}
+          EXPECT_GITHUB_CACHE: ${{ toJson(false) }}
         run: |
           .github/workflows/cache-test.sh
 
