ci: never skip the success step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,6 +119,7 @@ jobs:
   success:
     runs-on: ubuntu-latest
     needs: run-systems
+    if: always()
     steps:
       - run: "true"
       - run: |
