Switch to Biome JS

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "type": "module",
   "scripts": {
     "build": "tsup",
-    "format": "prettier --write .",
-    "check-fmt": "prettier --check .",
-    "lint": "eslint src/**/*.ts",
+    "format": "biome format --write",
+    "check-fmt": "biome format",
+    "lint": "biome lint",
     "package": "ncc build",
     "all": "pnpm run format && pnpm run lint && pnpm run build && pnpm run package"
   },
@@ -33,18 +33,10 @@
     "tail": "^2.2.6"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.17.57",
     "@types/tail": "^2.2.3",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@vercel/ncc": "^0.38.3",
-    "eslint": "^8.57.1",
-    "eslint-import-resolver-typescript": "^3.10.1",
-    "eslint-plugin-github": "^4.10.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.4.1",
-    "prettier": "^3.5.3",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
