--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,45 @@ on:
     branches: [main]
 
 jobs:
-  success:
+  run-systems:
+    if: github.event_name == 'merge_group'
+    name: "Test: ${{ matrix.systems.nix-system }}"
+    runs-on: "${{ matrix.systems.runner }}"
+    permissions:
+      id-token: "write"
+      contents: "read"
+    env:
+      ACTIONS_STEP_DEBUG: true
+    strategy:
+      fail-fast: false
+      matrix:
+        systems:
+          - nix-system: "aarch64-darwin"
+            runner: "macos-latest"
+          - nix-system: "x86_64-darwin"
+            runner: "macos-13"
+          - nix-system: "aarch64-linux"
+            runner: "namespace-profile-default-arm64"
+          - nix-system: "x86_64-linux"
+            runner: "ubuntu-22.04"
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Nix on ${{ matrix.systems.nix-system }} system
+        uses: DeterminateSystems/determinate-nix-action@main
+        with:
+          extra-conf: |
+            narinfo-cache-negative-ttl = 0
+      - name: Cache the store
+        uses: ./
+        with:
+          _internal-strict-mode: true
+      - name: Check the cache for liveness
+        env:
+          EXPECT_GITHUB_CACHE: ${{ toJson(false) }}
+        run: |
+          .github/workflows/cache-test.sh
+
+  lint:
     name: Build
     runs-on: ubuntu-latest
     permissions:
@@ -27,3 +65,18 @@ jobs:
       - name: Assert no changes were made
         run: git diff --exit-code
         if: success() || failure()
+
+  success:
+    runs-on: ubuntu-latest
+    needs:
+      - run-systems
+      - lint
+    if: always()
+    steps:
+      - run: "true"
+      - run: |
+          echo "A dependent in the build matrix failed."
+          exit 1
+        if: |
+          contains(needs.*.result, 'failure') ||
+          contains(needs.*.result, 'cancelled')
